force-app/main/default/objects/Blue_Sheet__c/Blue_Sheet__c.object-meta.xml
<CustomObject>
    <label>Blue Sheet Entry</label>
    <nameField>
        <displayFormat>BSN-{000000}</displayFormat>
        <label>Blue Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blue Sheet Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>