force-app/main/default/objects/Blue_Sheet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blue Sheet Entries</relationshipLabel>
    <relationshipName>Blue_Sheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>