force-app/main/default/objects/Blue_Sheet__c/fields/Buying_Influence_Key_Win_Results__c.field-meta.xml
<CustomField>
    <fullName>Buying_Influence_Key_Win_Results__c</fullName>
    <label>Buying Influence Key Win-Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>