force-app/main/default/objects/Blue_Sheet__c/fields/Buying_Influence_Name__c.field-meta.xml
<CustomField>
    <fullName>Buying_Influence_Name__c</fullName>
    <formula>Buying_Influences_Involved__r.FirstName +&apos; &apos;+ Buying_Influences_Involved__r.LastName</formula>
    <label>Buying Influence Name</label>
    <type>Text</type>
</CustomField>