force-app/main/default/objects/Blue_Sheet__c/fields/Buying_Influences_Involved__c.field-meta.xml
<CustomField>
    <fullName>Buying_Influences_Involved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buying Influences Involved</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Blue Sheet Entries</relationshipLabel>
    <relationshipName>Blue_Sheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>