force-app/main/default/objects/Blue_Sheet__c/fields/Evidence_to_support_your_Rating__c.field-meta.xml
<CustomField>
    <fullName>Evidence_to_support_your_Rating__c</fullName>
    <label>Evidence to support your Rating</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>