force-app/main/default/objects/Blue_Sheet__c/fields/From_Whom__c.field-meta.xml
<CustomField>
    <fullName>From_Whom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Whom</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Blue_Sheet_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>