force-app/main/default/objects/Blue_Sheet__c/fields/Ideal_Customer_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Customer_Criteria__c</fullName>
    <label>Ideal Customer Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>