force-app/main/default/objects/Blue_Sheet__c/fields/Information_Needed__c.field-meta.xml
<CustomField>
    <fullName>Information_Needed__c</fullName>
    <label>Information Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>