force-app/main/default/objects/Blue_Sheet__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Blue_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>