force-app/main/default/objects/Blue_Sheet__c/fields/Possible_Actions__c.field-meta.xml
<CustomField>
    <fullName>Possible_Actions__c</fullName>
    <label>Possible Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>