force-app/main/default/objects/Blue_Sheet__c/fields/Rating_5_to_5__c.field-meta.xml
<CustomField>
    <fullName>Rating_5_to_5__c</fullName>
    <label>Rating (-5 to +5)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+5</fullName>
            </value>
            <value>
                <fullName>+4</fullName>
            </value>
            <value>
                <fullName>+3</fullName>
            </value>
            <value>
                <fullName>+2</fullName>
            </value>
            <value>
                <fullName>+1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>-2</fullName>
            </value>
            <value>
                <fullName>-3</fullName>
            </value>
            <value>
                <fullName>-4</fullName>
            </value>
            <value>
                <fullName>-5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>