force-app/main/default/objects/Blue_Sheet__c/fields/Summary_Of_My_Position_Today__c.field-meta.xml
<CustomField>
    <fullName>Summary_Of_My_Position_Today__c</fullName>
    <label>Summary Of My Position Today</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>