force-app/main/default/objects/Blue_Sheet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Buying Influences Involved</fullName>
            </value>
            <value>
                <fullName>Evidence to support your Rating</fullName>
            </value>
            <value>
                <fullName>Ideal Customer Criteria</fullName>
            </value>
            <value>
                <fullName>Red Flag</fullName>
            </value>
            <value>
                <fullName>Strength</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>