force-app/main/default/objects/Blue_Sheet__c/fields/What__c.field-meta.xml
<CustomField>
    <fullName>What__c</fullName>
    <label>What</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>