force-app/main/default/objects/Blue_Sheet__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <label>When</label>
    <type>Date</type>
</CustomField>