force-app/main/default/objects/Blue_Sheet__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Blue_Sheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>