force-app/main/default/objects/Blue_Sheet__c/fields/who_Name__c.field-meta.xml
<CustomField>
    <fullName>who_Name__c</fullName>
    <formula>Who__r.FirstName +&apos; &apos;+ Who__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>who Name</label>
    <type>Text</type>
</CustomField>