force-app/main/default/objects/Blue_Sheet__c/fields/Whom_Name__c.field-meta.xml
<CustomField>
    <fullName>Whom_Name__c</fullName>
    <formula>From_Whom__r.FirstName +&apos; &apos;+ From_Whom__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Whom Name</label>
    <type>Text</type>
</CustomField>